--- a/.trunk/trunk.yaml
+++ b/.trunk/trunk.yaml
@@ -1,10 +1,10 @@
 version: 0.1
 cli:
-  version: 1.24.0
+  version: 1.25.0
 plugins:
   sources:
     - id: trunk
-      ref: v1.7.1
+      ref: v1.7.3
       uri: https://github.com/trunk-io/plugins
 runtimes:
   enabled:
@@ -25,33 +25,33 @@ lint:
     - eslint
     - prettier
   enabled:
-    - actionlint@1.7.7
-    - biome@1.9.4
-    - checkov@3.2.447
-    - circleci@0.1.32638
+    - actionlint@1.7.8
+    - biome@2.3.2
+    - checkov@3.2.489
+    - circleci@0.1.33494
     - djlint@1.36.4
     - dotenv-linter@3.3.0
     - dustilock@1.2.0
     - git-diff-check
-    - gitleaks@8.27.2
-    - hadolint@2.12.1-beta
+    - gitleaks@8.28.0
+    - hadolint@2.14.0
     - kube-linter@0.7.2
-    - markdown-link-check@3.13.7
+    - markdown-link-check@3.14.1
     - markdownlint-cli2@0.18.1
     - markdownlint@0.45.0
-    - nancy@1.0.48
-    - osv-scanner@2.0.3
+    - nancy@1.0.52
+    - osv-scanner@2.2.4
     - oxipng@9.1.5
     - pre-commit-hooks@5.0.0
-    - semgrep@1.127.1
-    - shellcheck@0.10.0
+    - semgrep@1.142.0
+    - shellcheck@0.11.0
     - shfmt@3.6.0
-    - stylelint@16.21.0
+    - stylelint@16.25.0
     - svgo@4.0.0
-    - taplo@0.9.3
-    - trivy@0.63.0
-    - trufflehog-git@3.89.2
-    - trufflehog@3.89.2
+    - taplo@0.10.0
+    - trivy@0.67.2
+    - trufflehog-git@3.90.12
+    - trufflehog@3.90.12
     - yamllint@1.37.1
 merge:
   required_statuses:
